# projs

./: .gitignore
Simple-Web-Server/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  http_examples
binode/: README.txt
mongo_sql/: Makefile
s3bi/: README.txt
search_app/: .gdbinit  .gdbinit~  AddressInput.cpp  AddressInput.cpp~  AddressInput.hpp  App.cpp  App.hpp  AppPlan.txt  CategoryInput.cpp  CategoryInput.hpp  CurlClient.cpp  CurlClient.cpp~  CurlClient.hpp  EndDateInput.cpp  EndDateInput.hpp  GeoCoder.cpp  GeoCoder.hpp  InputEmptyChecker.cpp  InputEmptyChecker.hpp  InputValidityChecker.cpp  InputValidityChecker.hpp  InputVerifier  InputVerifier.cpp  InputVerifier.hpp  InstanceFactory.cpp  InstanceFactory.hpp  Makefile  MisUtils.cpp  MisUtils.cpp~  MisUtils.hpp  RadiusInput.cpp  RadiusInput.hpp  StartDateInput.cpp  StartDateInput.hpp  UserInput.hpp  View.cpp  View.hpp  browser.txt  curl.txt  search_app  (+1 more)
shrest_server/: .gdbinit  CMakeCache.txt  Makefile  Makefile~  config.txt  config.txt~  crm_template.db  gdb.txt  gdbscript~  server_http.hpp  server_http.hpp~  server_instance.cpp  server_instance.cpp~  shrest_log.h
soco_suv/: CMakeList.txt  CMakeLists.txt  avcodec.h  basename.exe.stackdump  borderlayout.cpp  borderlayout.h  build_ffmpeg_with_mingw.txt  build_qt.txt  build_qt_with_mingw.txt  config.h  contrlbar.cpp  contrlbar.h  ffplay.c  ffplay_define.h  left_pane.cpp  left_pane.h  left_pane_v1.cpp  left_pane_v1.h  miss_def.h  ps_1.txt  ps_2main_window.txt  ps_3_midea_process.txt  ps_4cmakelist_generator.txt  ps_5buglist.txt  ps_6SDL_QT.txt  ps_7avcodecod.txt  ps_8qt_display_video.txt  sc_av_work_around.c  sc_av_work_around.h  sc_code_decode.cpp  sc_code_decode.h  sc_decoder.cpp  sc_decoder.h  sc_decoder_new.cpp  sc_decoder_new.h  sc_encoder.cpp  sc_encoder.h  sc_exception.h  sc_exception_v1.cpp  sc_exception_v1.h  (+28 more)
soco_suv/soco_studio/: soco_studio.sdf  soco_studio.sln
soco_suv/soco_studio/soco_studio/: soco_studio.vcxproj
sss/: Makefile  README.txt  S3Epoll.cpp  S3Epoll.h  S3Exception.cpp  S3Exception.h  S3HttpParser.cpp  S3HttpParser.h  S3Log.cpp  S3Log.h  S3LogTest.cpp  S3Peer.cpp  S3Peer.h  S3Server.cpp  S3Server.h  S3ServerTest.cpp  S3Socket.cpp  S3Socket.h  xscript
thermo_monitor/: Main.cpp  Makefile  ObjectCreator.cpp  ObjectCreator.h  ObserverPolicy.cpp  ObserverPolicy.h  ObserverPolicyOnce.cpp  ObserverPolicyOnce.h  ThermoDetector.cpp  ThermoDetector.h  ThermoDetectorFa.cpp  ThermoDetectorFa.h  ThermoObserver.cpp  ThermoObserver.h  ThermoObserverFa.cpp  ThermoObserverFa.h  Thermometer.cpp  Thermometer.h  ThermometerFa.cpp  ThermometerFa.h
turing_machine/: Answer.txt  Makefile  Turing_Machine  (+3 more)
(+576 files in other folders)
